3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

server/gods.c: Apply patch #1627442 by Aaron Baugher, to fix bug #1551735. Works
  by using a key_value of "divine_giver_name" to objects that are given by a god.
Alex Schultz 2007-01-04

Fix a logic mistake: code should be called unless cursed and good only, not if good
 only set (since t->item is never NULL). This would make empty spellbooks and crash.
 common/treasure.c
Ryo 2007-01-03

Check len of client-sent commands.
 socket/item.c: a few checks.
Ryo 2007-01-02

Implement feature request #1443844: Lock in 1.9.0 is ethernal.
 Added new 'lock' command, locking/unlocking specified item.
 include/sproto.h
 server/c_object.c commands.c
Ryo 2007-01-02

server/{player.c, gods.c, apply.c, monster.c}: Fix bug #1543130 and make
  handling of can_use_armour and can_use_shield consistant.
Alex Schultz 2006-12-31

Implemented proposal #1497089: fix for some random items.
lib/artifacts, lib/formulae
Changed the title of several treasures from Gaea to Vitality, and from
Ruggilli to Blazing Fires, to match better the personality of those gods.
Yann Chachkoff 2006-12-30

Fix for bug #1539120: talisman of Evocation grants wrong skill.
Changed the name of the "Talisman of Evocation" artifact to "Talisman of Creation",
so there is no confusion with the skill name.

Last part of the fix for bug #1612838
common/treasure.c: Changed the formula used to compute the item_power of a
generated artifact treasure.
Yann Chachkoff 2006-12-30

Partial fix for bug #1612838: Problem with item_power code
server/apply.c
Now armours get +3*magic increase to their item_power field.

Corrected stupid mistakes made when fixing bug #1528525