@@ -15,6 +15,9 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+server/gods.c: Clean up follower_remove_given_items()
+Alex Schultz 2007-01-10
+
 Win32 compilation fixes: variables should be declared at function start.
  socket/item.c
  server/gods.c resurrection.c
