@@ -17,6 +17,9 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+server/gods.c: Clean up follower_remove_given_items()
+Alex Schultz 2007-01-10
+
 server/gods.c: Apply patch #1627442 by Aaron Baugher, to fix bug #1551735. Works
   by using a key_value of "divine_giver_name" to objects that are given by a god.
 Alex Schultz 2007-01-04
